2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't set localedir manually. Leave it to autoconf.
	* configure.ac
	* src/Makefile.am

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --install to ACLOCAL_AMFLAGS.
	Removed m4 from SUBDIRS.
	Updated automake 1.11 and autoconf 2.64.
	Replaced some obsolute macros with new one.
	* Makefile.am
	* configure.ac
	* m4/aria2_arg.m4

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed Makefile.am in m4 directory.
	* configure.ac
	* m4/ChangeLog
	* m4/Makefile.am
	* m4/Makefile.in

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused m4 macros.
	* m4/intldir.m4
	* m4/inttypes.m4
	* m4/isc-posix.m4
	* m4/libgnutls-extra.m4
	* m4/ulonglong.m4

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that causes segmentation fault if
	req->getCurrentUrl() contains printf formatting characters such as
	%d. The statement that causes this bug is useless and removed.
	* src/AbstractCommand.cc

2009-10-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.6.1

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Simplified Chinese translation. Thanks to translators.
	* po/zh_CN.po

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated translation template
	* po

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.6.1
	* configure.ac

2009-10-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed interval from 120 to 60 for dropping inactive peer.
	* src/DefaultBtInteractive.cc

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page for --user-agent and --peer-id-prefix option.
	* doc/aria2c.1.txt

2009-10-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code clean up
	* src/BtPostDownloadHandler.cc